--- a/style/cadastro.css
+++ b/style/cadastro.css
@@ -19,14 +19,17 @@ body {
 #menu {
     list-style: none;
     padding: 10px;
-    background-color: #11101b;
+    background-color: rgba(255, 254, 254, );
     width: 100%;
     margin: 0 auto;
     text-align: center;
 }
-.telecall-branco{
-    width: 170px;
-    float: left;
+.telecall-logo{
+    position: fixed;
+    width: 200px;
+    left: 10px;
+    top: 5px;
+    
 }
 
 
@@ -37,7 +40,7 @@ body {
 }
 
 #menu a {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     padding: 10px 20px;
     display: inline-block;
     text-decoration: none;
@@ -47,22 +50,22 @@ body {
 }
 
 #menu a:hover {
-    color: #11101b;
-    background-color: rgb(231, 230, 230);
+    color: #ffffff;
+    background-color: #0000ae;
     border-radius: 50px;
 }
 
+.navcadastro{
+    margin: auto 8px;
+    color: rgb(255, 255, 255);
+    float: right;
+    background-color: #c51d1d;
+
+}
 .navcadastro:hover {
     color: #11101b;
     background-color: rgb(231, 230, 230);
     border-radius: 50px;
-}
-.navcadastro{
-    margin: auto 8px;
-    color: white;
-    float: right;
-    background-color: #c51d1d;
-
 }
 .navlogin{
     color: white;
