--- a/style/index.css
+++ b/style/index.css
@@ -19,6 +19,10 @@ body {
     width: 100%;
     margin: 0 auto;
     text-align: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
 }
 .telecall-logo{
     position: fixed;
@@ -75,4 +79,9 @@ body {
     width: 100%;
     height: 100%;
     
+    
+}
+
+section img{
+    betwee
 }
