--- a/style/index.css
+++ b/style/index.css
@@ -81,7 +81,17 @@ body {
     
     
 }
+section h1 {
+    margin-top: 110px;
+    margin-bottom: 60px;
+    color: rgb(0, 59, 113);
+    text-align: center;
+    font-size: 35px;
+}
 
-section img{
-    betwee
+
+section{
+    margin-top: 130px;
+    display: flex;
+
 }
