--- a/style/index.css
+++ b/style/index.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 body {
     background-image: url("/imgs/otherbg3.jpeg");
     background-size: cover;
@@ -24,12 +25,13 @@ body {
     left: 0;
     z-index: 9999;
 }
-.telecall-logo{
+
+.telecall-logo {
     position: fixed;
     width: 200px;
     left: 10px;
     top: 5px;
-    
+
 }
 
 
@@ -55,43 +57,89 @@ body {
     border-radius: 50px;
 }
 
-.navcadastro{
+.navcadastro {
     margin: auto 8px;
     color: rgb(255, 255, 255);
     float: right;
     background-color: #c51d1d;
-    
+
 }
+
 .navcadastro:hover {
     color: #11101b;
     background-color: rgb(231, 230, 230);
     border-radius: 50px;
 }
-.navlogin{
+
+.navlogin {
     color: white;
-    float:right;
+    float: right;
     background-color: #c51d1d;
 
 }
 
-.img-frontal{
+.img-frontal {
     position: relative;
     width: 100%;
     height: 100%;
-    
-    
-}
-section h1 {
-    margin-top: 110px;
-    margin-bottom: 60px;
-    color: rgb(0, 59, 113);
-    text-align: center;
-    font-size: 35px;
 }
 
-
-section{
+section {
     margin-top: 130px;
     display: flex;
+    align-items:center;
+}
+
+section h1 {
+    margin-bottom: 200px;
+    color: rgb(0, 59, 113);
+    text-align: center;
+    font-size: 65px;
+}
+
+.mega100p {
+    position: relative;
+    top: -80px;
+    border: 2px solid black;
+    border-radius: 30px;
+    text-align: center;
+    width: 150px;
+    height: 50px;
+    line-height: 45px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: rgb(0, 59, 113);
+    color: #fff;
+    transition: background-color 0.4s;
+
+}
+
+section a {
+    text-decoration: none;
+    color: white;
+}
+
+
+.mega100p,
+.mega200p,
+.mega300p {
+    position: relative;
+    top: -80px;
+    border: 2px solid black;
+    border-radius: 30px;
+    text-align: center;
+    width: 150px;
+    height: 50px;
+    line-height: 45px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: rgb(0, 59, 113);
+    color: #fff;
+    transition: background-color 0.4s;
+
+}
+
+.mega100p:hover, .mega200p:hover, .mega300p:hover  {
+    background-color: #1e13af;
 
 }
